--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "simpleuid"
-version = "2.0.0-dev.0"
+version = "2.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "simpleuid"
+crate-type = ["cdylib"]
 
 [dependencies]
+pyo3 = "0.19.0"
 rand = "0.8.5"
