Move package information tot `pyproject.toml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ build-backend = "maturin"
 
 [project]
 name = "simpleuid"
+version = "2.0.0a0"
+author = "Wibo Kuipers"
+description = "A simple and intuitive Python package for generating random IDs written in Rust."
+readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
@@ -19,3 +23,7 @@ dynamic = ["version"]
 [tool.maturin]
 python-source = "python"
 features = ["pyo3/extension-module"]
+
+[project.urls]
+Homepage = "https://github.com/w-kuipers/simpleuid"
+Issues = "https://github.com/w-kuipers/simpleuid/issues"
