--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh release create -p '${{ github.ref_name }}' --repo '${{ github.repository }}' --generate-notes;
+          gh release create '${{ github.ref_name }}' --repo '${{ github.repository }}' --generate-notes;
 
       - name: Upload artifact signatures to GitHub Release
         env:
